--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -16,10 +16,10 @@ body {
 }
 
 .PlayerGroup {
-  margin: 64px 64px 64px 64px;
+  margin: 0 auto;
+  padding-top: 128px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  justify-content: center;
   max-width: 960px;
   grid-gap: 24px;
 }
