fix: use lower case class names

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -10,7 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.Channels {
+.channels {
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -20,14 +20,14 @@ body {
 }
 
 @media (max-width: 920px) {
-  .Channels {
+  .channels {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 48px;
   }
 }
 
 @media (max-width: 720px) {
-  .Channels {
+  .channels {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 48px;
   }
