refactor: break out individual channel components into one single channel component

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -21,16 +21,26 @@ body {
 
 @media (max-width: 920px) {
   .channels {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 48px;
   }
 }
 
 @media (max-width: 720px) {
   .channels {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-gap: 48px;
   }
+}
+
+.channel {
+  width: 200px;
+}
+
+#play-icon {
+  width: 100%;
+  max-width: 20rem;
+  height: auto !important;
 }
 
 .audio-player {
