--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -15,7 +15,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, 200px);
   width: 100%;
-  max-width: 960px;
+  max-width: 80%;
   grid-gap: 48px;
   padding: 128px 0;
   justify-content: space-around;
